[project]
requires-python = ">=3.6"
name = "gsd"
version = "3.1.0"
description = "General simulation data file format."
readme = "README.md"
license = {text = "BSD-2-Clause"}
authors = [
    {name = "Joshua A. Anderson", email = "joaander@umich.edu"},
]
classifiers=[
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX",
    "License :: OSI Approved :: BSD License",
    "Topic :: Scientific/Engineering :: Physics",
    ]
dependencies = ["numpy>=1.9.3"]

[project.scripts]
gsd = "gsd.__main__:main"

[project.urls]
Homepage = "https://gsd.readthedocs.io"
Documentation = "https://gsd.readthedocs.io"
Download = "https://github.com/glotzerlab/gsd/releases/download/v3.1.0/gsd-3.1.0.tar.gz"
Source = "https://github.com/glotzerlab/gsd"
Issues = "https://github.com/glotzerlab/gsd/issues"

[tool.setuptools]
packages = ["gsd", "gsd.test"]

[build-system]
requires = ["setuptools>=64.0.0",
            "wheel",
            "Cython",
            "oldest-supported-numpy"]

[tool.cibuildwheel]
# Build for cpython only
skip =  "pp*"

# Test the wheels.
test-command = "pytest --pyargs gsd -v --log-level=DEBUG"
test-skip = "*-macosx_arm64"
test-requires = "pytest"

# Build only on 64-bit architectures.
archs = ["auto64"]

[tool.cibuildwheel.macos]
# Build for x86_64 and arm64
archs = ["x86_64", "arm64"]

[tool.cibuildwheel.linux]
# dependencies do not build for musl
skip = ["pp* *musllinux*"]
