[project]
requires-python = ">=3.6"
name = "gsd"
version = "3.4.0"
description = "General simulation data file format."
readme = "README.md"
license = {text = "BSD-2-Clause"}
authors = [
    {name = "Joshua A. Anderson", email = "joaander@umich.edu"},
]
classifiers=[
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX",
    "License :: OSI Approved :: BSD License",
    "Topic :: Scientific/Engineering :: Physics",
    ]
dependencies = ["numpy>=2.0.0"]

[project.scripts]
gsd = "gsd.__main__:main"

[project.urls]
Homepage = "https://gsd.readthedocs.io"
Documentation = "https://gsd.readthedocs.io"
Download = "https://github.com/glotzerlab/gsd/releases/download/v3.4.0/gsd-3.4.0.tar.gz"
Source = "https://github.com/glotzerlab/gsd"
Issues = "https://github.com/glotzerlab/gsd/issues"

[tool.setuptools]
packages = ["gsd", "gsd.test"]

[build-system]
requires = ["setuptools>=64.0.0",
            "wheel",
            "Cython",
            "numpy>=2.0.0rc1"]

[tool.cibuildwheel]
# Test the wheels.
test-command = "pytest --pyargs gsd -v --log-level=DEBUG"

# Build on 64-bit architectures.
archs = ["auto64"]

[tool.cibuildwheel.linux]
# dependencies do not build for musl
skip = ["pp* *musllinux*"]
