[bumpversion]
current_version = 2.0.0
commit = False
tag = False

[metadata]
description-file = README.md

[bumpversion:file:setup.py]

[bumpversion:file:gsd/__init__.py]

[bumpversion:file:gsd/pygsd.py]

[bumpversion:file:INSTALLING.rst]

[bumpversion:file:Doxyfile]

[flake8]
select = E,F,W,N
filename = *.pyx,*.px*,*.py
ignore =
	W503,
	N806,N803
per-file-ignores =
	gsd/fl.pyx:E225,E226,E227,E999
	gsd/libgsd.pxd:E225,E226,E227,E999
exclude = .git,
	__pycache__,
	doc/conf.py,
	run-clang-format.py,
	build,
	dist
max_line_length = 80
max_doc_length = 80
hang_closing = True

[yapf]
based_on_style = pep8
blank_line_before_module_docstring = True
column_limit = 80
join_multiple_lines = False
split_before_arithmetic_operator = True
disable_ending_comma_heuristic = True
split_all_top_level_comma_separated_values = True
split_before_closing_bracket = False
split_complex_comprehension = True
