[metadata]
description-file = README.md

[flake8]
select = E,F,W,N,D,RST
filename = *.pyx,*.px*,*.py
ignore = W503,N806,N803,E126,E133,D107
per-file-ignores =
    gsd/fl.pyx:E225,E226,E227,E999
    gsd/libgsd.pxd:E225,E226,E227,E999
    setup.py:D
exclude = .git,
    __pycache__,
    doc/conf.py,
    run-clang-format.py,
    build,
    dist
max_line_length = 80
max_doc_length = 80
hang_closing = True
docstring-convention=google
rst-directives =
    program
    option
rst-roles =
    file,
    py:mod,
    py:class,
    py:meth,
    py:func,
    mod,
    class,
    meth,
    func,
    chunk,
    ref,
    py:exc,

[yapf]
based_on_style = google
align_closing_bracket_with_visual_indent = True
split_before_arithmetic_operator = True
split_before_bitwise_operator = True
split_before_logical_operator = True
blank_line_before_module_docstring = True
split_before_dot = True
